Fixed tab background on small screen

--- a/css/app.css
+++ b/css/app.css
@@ -45,6 +45,10 @@
   color: radial-gradient(rgb(7, 7, 173), 10%, black);
 }
 
+.blueLine {
+  border-color: rgba(7, 7, 173, .9);
+}
+
 body {
   background-color: black;
 }
@@ -123,7 +127,8 @@ body {
 }
 
 .smallscreenHeader h1 {
-  color: rgba(255, 255, 255, .6);
+  color: rgba(255, 255, 255, .9);
+  font-size: 2rem;
 }
 
 .smallscreenHeader p {
@@ -282,29 +287,44 @@ body {
         -ms-flex-direction: column;
             flex-direction: column;
     text-align: center;
-    background-image: radial-gradient(ellipse farthest-corner at center, rgba(240, 234, 214, 1) 35%, rgba(255, 255, 242, 1) 65%, rgba(255, 255, 255, 1) 100%);
-    padding: 1rem;
+    background: rgb(255, 255, 255);
+    border-width: thick;
+    border-style: ridge;
+    border-color: rgba(84, 84, 131, 0.9);
+    padding: 2rem;
     color: rgb(58, 22, 56);
   }
-
-  /* rgb(124, 23, 28) */
   
-  .flip-card-inner-back-title {
+  .flip-card-inner-back-title, .flip-card-inner-back h4 {
     font-weight: bold;
+    color: rgb(94, 7, 89);
+    line-height: 1;
   }
   
   .flip-card-inner-back-text {
-    line-height: 1.3;
+    line-height: 1.2;
   }
   
+  .flip-card-inner-back p {
+    color: rgb(53, 48, 53);
+    padding: 5px 15px 0px 15px;
+    text-align: left;
+  }
+
+
   /* ==================================== */
   /* BLOG CARDS */
+
+  .glow:hover {
+    box-shadow: 0px 0px 6px 6px cadetblue;
+  }
   
   .card-article-hover {
     box-shadow: 0px 0px 7px #888888;
   }
   
   .card-article-hover .card-section {
+    color: black;
     width: 90%;
     background: #fff;
     margin: 0 auto;
@@ -317,6 +337,7 @@ body {
     text-transform: uppercase;
     letter-spacing: 2px;
     font-size: 0.85rem;
+    color: #2daebf;
   }
   
   .card-article-hover .card-section .article-title {
@@ -329,6 +350,7 @@ body {
   .card-article-hover .card-section .article-desc {
     font-family: ‘Georgia, serif;
     font-size: 1rem;
+    color: #000;
   }
   
   .card-article-hover .card-divider {
